
## Copyright 2015-2022 Mo McRoberts.
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

dist_noinst_DATA = Errors.idl Types.idl UUID.idl \
	\
	IAddressSpace.idl IAllocator.idl IBootEnvironment.idl IContainer.idl \
	IContext.idl IDespatchContext.idl IDirectoryEntry.idl \
	IDirectoryEntryTarget.idl IEvent.idl IExecutable.idl IIterator.idl \
	IJob.idl ILink.idl IMutableContainer.idl INamespace.idl IObject.idl \
	IPlatform.idl IPlatformDiagnostics.idl IRegion.idl IRegionHolder.idl \
	ISubsystem.idl ITask.idl ITasker.idl IThread.idl IWriteChannel.idl \
	\
	MDirectoryEntryTarget.idl MFactory.idl MObject.idl
